# fledge-plugin-gitleaks

./: Cargo.toml  README.md  fledge.toml  plugin.toml
.claude/commands/specsync/: create-spec.md
.cursor/commands/: specsync-create-spec.md
.fledge/: meta.toml
.gemini/commands/specsync/: create-change.toml  create-spec.toml
.github/workflows/: ci.yml  release.yml  trust.yml
.specsync/: adoption-report.json  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-gitleaks-fledge-plugin/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-gitleaks-fledge-plugin/deltas/: gitleaks.md
.specsync/changes/CHG-0002-correct-the-migration-contract-and-portable-verification-guidance/: approvals.json  change.md  context.md  design.md  docs.md  requirements.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0002-correct-the-migration-contract-and-portable-verification-guidance/deltas/: gitleaks.md
.specsync/changes/CHG-0003-cover-remaining-rollout-governance-files-in-the-sdd-lifecycle/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
docs/: index.html
specs/gitleaks/: context.md  gitleaks.spec.md  requirements.md  tasks.md  testing.md
src/: main.rs
